<resources>
    <string name="app_name">My Application</string>

    <string name="ble_not_supported">您的设备不支持BLE</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No Connection</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">查找BLE设备</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="send">Send</string>
    <!-- Menu items -->
    <string name="menu_connect">连接</string>
    <string name="menu_disconnect">断开</string>
    <string name="menu_scan">搜索</string>
    <string name="menu_stop">停止</string>
    <string name="qijian1">钢丝钳</string>
    <string name="qijian2">尖嘴钳</string>
    <string name="qijian3">十字螺丝刀3寸</string>
    <string name="qijian4">十字螺丝刀12寸</string>
    <string name="qijian5">十字螺丝刀5寸</string>
    <string name="qijian6">一字螺丝刀12寸</string>
    <string name="qijian7">一字螺丝刀3寸</string>
    <string name="qijian8">一字螺丝刀5寸</string>
    <string name="qijian9">裁纸刀</string>
    <string name="qijian10">活扳手</string>
    <string name="tishi">正常</string>

</resources>
