<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">
    <LinearLayout
        android:layout_height="30dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:textColor="@color/textcolor"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="@dimen/textsize"
            android:text="记录时间"/>
        <TextView
            android:id="@+id/textview_time"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:textColor="@color/textcolor"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="@dimen/textsize"
            android:text="9月29日10:48:56"/>
    </LinearLayout>


    <LinearLayout
        android:layout_height="30dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:textColor="@color/textcolor"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="@dimen/textsize_14"
            android:text="@string/qijian1"/>
        <TextView
            android:id="@+id/text1"
            android:textSize="@dimen/textsize_14"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/textcolor"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/tishi"/>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:textColor="@color/textcolor"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="@dimen/textsize_14"
            android:text="@string/qijian2"/>
        <TextView
            android:id="@+id/text2"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:textSize="@dimen/textsize_14"
            android:textColor="@color/textcolor"
            android:gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:text="@string/tishi"/>
        </LinearLayout>
    <LinearLayout
        android:layout_height="30dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:textColor="@color/textcolor"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="@dimen/textsize_14"
            android:text="@string/qijian9"/>
        <TextView
            android:id="@+id/text9"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/textcolor"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="@dimen/textsize_14"
            android:text="@string/tishi"/>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:textColor="@color/textcolor"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="@dimen/textsize_14"
            android:text="@string/qijian10"/>
        <TextView
            android:id="@+id/text10"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/textcolor"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="@dimen/textsize_14"
            android:text="@string/tishi"/>
    </LinearLayout>
    <LinearLayout
        android:layout_height="30dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="@dimen/textsize_14"
            android:textColor="@color/textcolor"
            android:text="@string/qijian3"/>
        <TextView
            android:id="@+id/text3"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/textcolor"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="@dimen/textsize_14"
            android:text="@string/tishi"/>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:textColor="@color/textcolor"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="@dimen/textsize_14"
            android:text="@string/qijian4"/>
        <TextView
            android:id="@+id/text4"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/textcolor"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="@dimen/textsize_14"
            android:text="@string/tishi"/>
    </LinearLayout>
    <LinearLayout
        android:layout_height="30dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:textColor="@color/textcolor"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="@dimen/textsize_14"
            android:text="@string/qijian5"/>
        <TextView
            android:id="@+id/text5"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/textcolor"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="@dimen/textsize_14"
            android:text="@string/tishi"/>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:textColor="@color/textcolor"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="@dimen/textsize_14"
            android:text="@string/qijian6"/>
        <TextView
            android:id="@+id/text6"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/textcolor"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="@dimen/textsize_14"
            android:text="@string/tishi"/>
    </LinearLayout>
    <LinearLayout
        android:layout_height="30dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:textColor="@color/textcolor"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="@dimen/textsize_14"
            android:text="@string/qijian7"/>
        <TextView
            android:id="@+id/text7"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/textcolor"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="@dimen/textsize_14"
            android:text="@string/tishi"/>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:textColor="@color/textcolor"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="@dimen/textsize_14"
            android:text="@string/qijian8"/>
        <TextView
            android:id="@+id/text8"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/textcolor"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="@dimen/textsize_14"
            android:text="@string/tishi"/>
    </LinearLayout>
    <View
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="#FF909090"/>

</LinearLayout>
